Fix background color on ink cards in dark mode

--- a/app/javascript/src/collected_inks/cards/swab-card.scss
+++ b/app/javascript/src/collected_inks/cards/swab-card.scss
@@ -2,6 +2,7 @@
   margin-block: 15px;
   display: flex;
   flex-direction: column;
+  background: var(--fpc-bright-background);
 
   .fpc-swab-card__swab {
     margin-inline: auto;
